--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -14,6 +14,17 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
+      # ✅ REQUIRED for React Native / Expo
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          cache: 'npm'
+
+      # ✅ REQUIRED
+      - name: Install JS dependencies
+        run: npm install
+
       - name: Set up Java
         uses: actions/setup-java@v4
         with:
