--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -23,8 +23,8 @@ jobs:
 
       # ✅ REQUIRED
       - name: Install JS dependencies
-        run: npm install
-
+        run: npm install --legacy-peer-deps
+  
       - name: Set up Java
         uses: actions/setup-java@v4
         with:
