--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -14,31 +14,39 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      # ✅ REQUIRED for React Native / Expo
+      # Set up Node.js (required for Expo / React Native)
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: 'npm'
+          cache: npm
 
-      # ✅ REQUIRED
+      # Install JS dependencies
       - name: Install JS dependencies
+        env:
+          NODE_ENV: production
         run: npm install --legacy-peer-deps
-  
+
+      # Set up Java for Android build
       - name: Set up Java
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          distribution: temurin
+          java-version: 17
 
+      # Make Gradle wrapper executable
       - name: Make gradlew executable
         run: chmod +x android/gradlew
 
+      # Build debug APK
       - name: Build debug APK
+        env:
+          NODE_ENV: production
         run: |
           cd android
           ./gradlew assembleDebug
 
+      # Upload APK artifact
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
