--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -11,48 +11,36 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout repo
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v4
 
-      # 2. Set up Node.js (Expo + RN compatible)
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
           cache: npm
 
-      # 3. Install JS dependencies
-      #    - install devDependencies (for patch-package)
-      #    - disable Expo config plugins (fixes ESM error)
-      - name: Install JS dependencies
-        env:
-          NODE_ENV: production
-          EXPO_NO_CONFIG_PLUGINS: "1"
-        run: npm install --legacy-peer-deps --include=dev
+      # 🚨 DO NOT set NODE_ENV here
+      - name: Install JS dependencies (with patches)
+        run: npm install --legacy-peer-deps
 
-      # 4. Set up Java for Android
       - name: Set up Java
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
 
-      # 5. Make Gradle wrapper executable
       - name: Make gradlew executable
         run: chmod +x android/gradlew
 
-      # 6. Build debug APK
-      #    - disable Expo config plugins again (critical)
-      - name: Build debug APK
+      # NODE_ENV only for Gradle step
+      - name: Build Debug APK
         env:
           NODE_ENV: production
-          EXPO_NO_CONFIG_PLUGINS: "1"
         run: |
           cd android
           ./gradlew assembleDebug
 
-      # 7. Upload APK artifact
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
