--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -63,3 +63,9 @@ expo.useLegacyPackaging=false
 # Specifies whether the app is configured to use edge-to-edge via the app config or plugin
 # WARNING: This property has been deprecated and will be removed in Expo SDK 55. Use `edgeToEdgeEnabled` or `react.edgeToEdgeEnabled` to determine whether the project is using edge-to-edge.
 expo.edgeToEdgeEnabled=true
+
+# CI stability fixes
+org.gradle.caching=false
+org.gradle.daemon=false
+org.gradle.parallel=false
+org.gradle.jvmargs=-Xmx4g -Dfile.encoding=UTF-8
