--- a/app.json
+++ b/app.json
@@ -54,10 +54,7 @@
       "package": "com.nuvio.app",
       "versionCode": 25,
       "architectures": [
-        "arm64-v8a",
-        "armeabi-v7a",
-        "x86",
-        "x86_64"
+        "armeabi-v7a"
       ],
       "jsEngine": "hermes"
     },
