--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -69,3 +69,4 @@ org.gradle.caching=false
 org.gradle.daemon=false
 org.gradle.parallel=false
 org.gradle.jvmargs=-Xmx4g -Dfile.encoding=UTF-8
+android.prefab=false
