Fix path concatenation for hermesc command

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,7 +24,7 @@ react {
         .getAbsoluteFile()
 
     hermesCommand =
-        reactNativeDir.getAbsolutePath() + "/sdks/hermesc/%OS-BIN%/hermesc"
+        reactNativeDir.asFile.absolutePath + "/sdks/hermesc/%OS-BIN%/hermesc"
 
     codegenDir = new File([
         "node",
